[gd_scene load_steps=5 format=3 uid="uid://cmq8rolsrfnvg"]

[ext_resource type="Script" path="res://Scripts/Interface/note_interface.gd" id="1_b6htj"]
[ext_resource type="Texture2D" uid="uid://db78hxvqhvv0s" path="res://Assets/Graphics/Object_tiles/NoteBackground.png" id="2_rkqgv"]
[ext_resource type="Texture2D" uid="uid://1ax46a00r3s1" path="res://Assets/Graphics/Bestiaire/orc.png" id="3_wvvlg"]
[ext_resource type="AudioStream" uid="uid://bw8dumy7mx3oh" path="res://Assets/Sounds/Effect/page_turn.mp3" id="4_flq8i"]

[node name="note_interface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b6htj")

[node name="new" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.5
offset_top = -104.5
offset_right = 90.5
offset_bottom = 104.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rkqgv")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="image" type="Sprite2D" parent="NinePatchRect"]
unique_name_in_owner = true
position = Vector2(94.5, 42.5)
texture = ExtResource("3_wvvlg")

[node name="zone_text" type="RichTextLabel" parent="NinePatchRect"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 1.0
offset_top = 71.0
offset_right = 182.0
offset_bottom = 171.0
text = "ddd"

[node name="new_text" type="RichTextLabel" parent="NinePatchRect"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 3.5
offset_top = 171.5
offset_right = 184.5
offset_bottom = 205.5
size_flags_vertical = 8
text = "New "

[node name="open" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_flq8i")

[connection signal="timeout" from="new" to="." method="_on_new_timeout"]
